// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionInputs /> tests stage inputs completed 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div />
          </form>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ExecutionInputs /> tests stage inputs loading 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="bp3-spinner"
    >
      <div
        class="bp3-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ExecutionInputs /> tests stage inputs submit works 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="topAccordion stage"
          >
            <div
              class="accordionSummary"
              id="Stage.undefined.Variables"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
              >
                common.variables
              </p>
              <div
                class="nestedAccordions"
              >
                <div
                  class="customVariablesInputSets customVariables"
                >
                  <div
                    class="variableListTable"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      test
                    </p>
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      String
                    </p>
                    <div
                      class="valueRow"
                    >
                      <div
                        class="bp3-form-group variableInput"
                        data-id="stage.variables[0].value-0"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          >
                            <div
                              class="bp3-input-group MultiTypeInput--input"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="stage.variables[0].value"
                                type="text"
                                value=""
                              />
                            </div>
                            <span
                              class="bp3-popover-wrapper MultiTypeInput--wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <button
                                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                >
                                  <span
                                    class="bp3-icon StyledProps--main"
                                    data-icon="fixed-input"
                                  >
                                    <svg
                                      height="12"
                                      viewBox="0 0 9 9"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </button>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-primary"
              data-testid="submit"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color Button--variation Button--variation-primary"
              data-testid="abort"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.actions.abortPipeline
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ExecutionInputs /> tests step inputs completed 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="timeout-0"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="execution-input_timeout"
                    >
                      pipelineSteps.timeoutLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-disabled bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          disabled=""
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value="1m"
                        />
                      </div>
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        disabled=""
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="fixed-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 9 9"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                              fill="currentColor"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ExecutionInputs /> tests step inputs submit works 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="formGroup sm"
              >
                <div
                  class="bp3-form-group"
                  data-id="timeout-0"
                >
                  <label
                    class="bp3-label"
                    for="timeout"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="execution-input_timeout"
                    >
                      pipelineSteps.timeoutLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                      style="flex-grow: 1;"
                    >
                      <div
                        class="bp3-input-group bp3-fill"
                      >
                        <input
                          class="bp3-input"
                          name="timeout"
                          placeholder="Enter w/d/h/m/s/ms"
                          type="text"
                          value=""
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-primary"
              data-testid="submit"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-danger Button--with-current-color Button--variation Button--variation-primary"
              data-testid="abort"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                pipeline.execution.actions.abortPipeline
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
